--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 <body>
   <h1>Git Quiz</h1>
   <h4>What is Git and why is it so important?</h4>
+  <p>It's a distributed version control system that enables multiple developers to work on the codebase without breaking the application!</p>
   <h4>What's a branch and why do we create them?</h4>
-  <h4>Waht's the working tree?</h4>
+  <p>A branch starts out as a copy of the main codebase. Any work done in the branch is isolated from the main branch so that it doesn't break the main application. It can be merged with the main application when it works.</p>
+  <h4>What's the working tree?</h4>
+  <p>The files in the initialised local repo that haven't been commited.</p>
   <h4>What's the staging area?</h4>
+  <p>An area tha holds files waiting to be commited.</p>
   <h4>What's the command to retrieve the latest version of your files from the remote server?</h4>
+  <p>git pull origin master (the first time), then just git pull.</p>
 </body>
 </html>
